--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,15 @@
     "target": "ES6",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*",
+    "knexfile.ts"
+  ],
   "exclude": ["node_modules"]
 }
