--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.2",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
