--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "supertest": "^7.0.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
