--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2",
     "supertest": "^7.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
   },
@@ -33,6 +35,8 @@
     "@types/node": "^22.13.8",
     "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
     "knex": "^3.1.0",
     "ts-jest": "^29.2.6",
